aesthetics: fix mobile page spacing at the source

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -6,6 +6,10 @@
   margin-top: 1em;
   margin-bottom: 2em;
 
+  @media (max-width: 1023px) {
+    margin-top: 0;
+  }
+
   @include breakpoint($large) {
     float: right;
     width: calc(100% - #{$right-sidebar-width-narrow});
